--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -81,6 +81,8 @@ html:root {
 			background-image: none;
 		}
 	}
+
+	
 }
 body {
 	.el-input {
@@ -436,6 +438,8 @@ body {
 	.el-button:hover {
 		border-color: transparent;
 		outline: none;
+		background-color: var(--el-button-bg-color);
+		color: var(--el-button-text-color);
 	}
 	.el-message {
 		max-width: calc(var(--body-width) - 32px);
@@ -475,6 +479,39 @@ body {
 
 	.el-loading-mask {
 		background-color: rgb(var(--color-bg-mask) / 0.3);
+	}
+
+	.el-message-box{
+		--el-messagebox-content-color:rgb(var(--color-text-main));
+		box-shadow: none;
+		border-radius: 16px;
+		border: 1px solid var(--transparent10);
+		background-color: rgb(var(--color-bg-base));
+		position: relative;
+		z-index: 1;
+		&::before {
+			background-image: var(--bg-linear-180);
+			// filter: blur(60px);
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			content: '';
+			z-index: -1;
+			opacity: 0.1;
+		}
+		.el-message-box__content{
+			padding: 20px 0;
+		}
+		.el-message-box__btns{
+			padding-top: 20px;
+			button{
+				flex: 1;
+				padding: 20px 10px;
+				border-radius: 66px;
+			}
+		}
 	}
 }
 
