--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -523,6 +523,11 @@ body {
 			}
 		}
 	}
+
+	.el-alert--error{
+		background-color: rgb(var(--color-red)/0.1)!important;
+		color: rgb(var(--color-red))!important;
+	}
 }
 
 @media (max-width: 999px) {
