--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -37,6 +37,9 @@ body {
 	padding: 0;
 	overflow: hidden;
 	overscroll-behavior: contain;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 #__nuxt {
 	will-change: transform, opacity;
