--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -45,6 +45,20 @@
 		background-color: rgb(var(--color-red) / 0.9);
 	}
 }
+.bt-brand{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: rgb(var(--color-brand));
+	border: 1px solid rgb(var(--color-brand));
+	color: white;
+	padding: 4px 12px;
+	border-radius: var(--el-border-radius-base);
+	font-size: 12px;
+	&:hover {
+		background-color: rgb(var(--color-brand) / 0.9);
+	}
+}
 
 .glass {
 	position: relative;
