--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -66,7 +66,7 @@
 		// background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
 		background-image: var(--bg-linear-90);
 		// filter: blur(60px);
-		border-radius: 999px;
+		// border-radius: 999px;
 		position: absolute;
 		top: 0;
 		left: 0;
