增加首页卡片

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -45,7 +45,7 @@
 		background-color: rgb(var(--color-red) / 0.9);
 	}
 }
-.bt-brand{
+.bt-brand {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -129,19 +129,18 @@
 
 .binance-bt {
 	background-color: #f3ba2f !important;
-	color: white!important;
+	color: white !important;
 }
 .okx-bt {
 	background-image: linear-gradient(130deg, #000000, #0c081c, #150946);
-	color: white!important;
+	color: white !important;
 }
 .coinbase-bt {
 	background-color: #0052ff !important;
-	color: white!important;
+	color: white !important;
 }
 
-.logout-bt{
-
+.logout-bt {
 }
 
 .global-form {
@@ -166,6 +165,15 @@
 			}
 		}
 	}
+}
+
+/* 隐藏滚动条 */
+.scrollbar-hide {
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none; /* IE 10+ */
+}
+.scrollbar-hide::-webkit-scrollbar {
+	display: none; /* Chrome, Safari, Opera */
 }
 
 @media (max-width: 9999) {
