--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -79,6 +79,25 @@
 	}
 }
 
+.glass-180 {
+	position: relative;
+	&::before {
+		// background-image: linear-gradient(90deg, #00dc82, #36e4da, #0047e1);
+		background-image: var(--bg-linear-180);
+		// filter: blur(60px);
+		// border-radius: 999px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		z-index: -1;
+		opacity: 0.2;
+		// transition: all 0.3s ease;
+	}
+}
+
 .binance-card {
 	position: relative;
 	&::before {
