--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -224,6 +224,13 @@
 	}
 }
 
+.tag-real{
+	@apply rounded-sm bg-green/50 flex items-center leading-none; 
+	font-size: 10px;
+	padding: 4px 4px;
+	
+}
+
 /* 隐藏滚动条 */
 .scrollbar-hide {
 	scrollbar-width: none; /* Firefox */
@@ -232,6 +239,8 @@
 .scrollbar-hide::-webkit-scrollbar {
 	display: none; /* Chrome, Safari, Opera */
 }
+
+
 
 @media (max-width: 9999) {
 	.tcaptcha-transform {
