--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -230,6 +230,24 @@
 	padding: 4px 4px;
 	
 }
+.tag-default{
+	@apply rounded-sm flex items-center leading-none text-grey; 
+	font-size: 10px;
+	padding: 4px 4px;
+	background-color: var(--transparent10);
+}
+.tag-red{
+	@apply rounded-sm bg-red/20 flex items-center leading-none text-red; 
+	font-size: 10px;
+	padding: 4px 4px;
+}
+
+.tag-green{
+	@apply rounded-sm bg-green/20 flex items-center leading-none text-green; 
+	font-size: 10px;
+	padding: 4px 4px;
+}
+
 
 /* 隐藏滚动条 */
 .scrollbar-hide {
