--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -231,7 +231,7 @@
 	
 }
 .tag-default{
-	@apply rounded-sm flex items-center leading-none text-grey; 
+	@apply rounded-sm flex items-center leading-none text-main; 
 	font-size: 10px;
 	padding: 4px 4px;
 	background-color: var(--transparent10);
