--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -14,7 +14,7 @@ html:root {
 	--el-bg-color-overlay: var(--transparent10);
 	--el-border-color: var(--transparent10);
 	--el-border-color-light: var(--transparent10);
-	--el-border-radius-base:4px;
+	--el-border-radius-base: 4px;
 
 	--el-switch-off-color: var(--el-menu-bg-color);
 
@@ -83,7 +83,7 @@ html:root {
 		}
 	}
 
-	.el-message-box{
+	.el-message-box {
 		&::before {
 			background-image: none;
 		}
@@ -91,7 +91,6 @@ html:root {
 }
 body {
 	.el-input {
-		
 		--el-input-border-color: var(--transparent10);
 		--el-input-border-color-hover: var(--transparent20);
 		--el-input-text-color: rgb(var(--color-text-main));
@@ -487,8 +486,8 @@ body {
 		background-color: rgb(var(--color-bg-mask) / 0.3);
 	}
 
-	.el-message-box{
-		--el-messagebox-content-color:rgb(var(--color-text-main));
+	.el-message-box {
+		--el-messagebox-content-color: rgb(var(--color-text-main));
 		box-shadow: none;
 		border-radius: 16px;
 		border: 1px solid var(--transparent10);
@@ -508,15 +507,15 @@ body {
 			z-index: -1;
 			opacity: 0.1;
 		}
-		.el-message-box__header.show-close{
+		.el-message-box__header.show-close {
 			padding-right: 0;
 		}
-		.el-message-box__content{
+		.el-message-box__content {
 			padding: 20px 0;
 		}
-		.el-message-box__btns{
+		.el-message-box__btns {
 			padding-top: 20px;
-			button{
+			button {
 				flex: 1;
 				padding: 20px 10px;
 				border-radius: 6px;
@@ -524,15 +523,15 @@ body {
 		}
 	}
 
-	.el-alert--error{
-		background-color: rgb(var(--color-red)/0.1)!important;
-		color: rgb(var(--color-red))!important;
+	.el-alert--error {
+		background-color: rgb(var(--color-red) / 0.1) !important;
+		color: rgb(var(--color-red)) !important;
 	}
 }
 
 @media (max-width: 999px) {
-	html:root{
-		--el-border-radius-base:6px;
+	html:root {
+		--el-border-radius-base: 6px;
 	}
 	.el-dialog {
 		min-width: 90%;
@@ -550,5 +549,17 @@ body {
 			border-radius: 16px 16px 0 0;
 			border-top: 1px solid var(--transparent10);
 		}
+	}
+	.el-input-number {
+		.el-input-number__decrease,
+		.el-input-number__increase {
+			width: 30px !important;
+		}
+	}
+	.el-input__wrapper:hover {
+		box-shadow: 0 0 0 1px var(--el-input-border-color) inset !important;
+	}
+	.el-input-number__increase:hover ~ .el-input:not(.is-disabled) .el-input__wrapper {
+		box-shadow: 0 0 0 1px var(--el-input-border-color) inset !important;
 	}
 }
