--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -249,43 +249,43 @@
 }
 
 .tag-real{
-	@apply rounded-full bg-green/20 flex items-center leading-none text-green; 
+	@apply rounded-full bg-green/20 flex items-center leading-none text-green text-nowrap; 
 	font-size: 10px;
 	padding: 4px 5px;
 	
 }
 .tag-demo{
-	@apply rounded-full bg-invert flex items-center leading-none text-invert; 
+	@apply rounded-full bg-invert flex items-center leading-none text-invert text-nowrap; 
 	font-size: 10px;
 	padding: 4px 5px;
 	
 }
 .tag-default{
-	@apply rounded-full flex items-center leading-none text-main; 
+	@apply rounded-full flex items-center leading-none text-main text-nowrap; 
 	font-size: 10px;
 	padding: 4px 5px;
 	background-color: var(--transparent10);
 }
 .tag-red{
-	@apply rounded-full bg-red/20 flex items-center leading-none text-red; 
+	@apply rounded-full bg-red/20 flex items-center leading-none text-red text-nowrap; 
 	font-size: 10px;
 	padding: 4px 5px;
 }
 
 .tag-green{
-	@apply rounded-full bg-green/20 flex items-center leading-none text-green; 
+	@apply rounded-full bg-green/20 flex items-center leading-none text-green text-nowrap; 
 	font-size: 10px;
 	padding: 4px 5px;
 }
 
 .tag-red-large{
-	@apply rounded-full bg-red/50 flex items-center leading-none text-white; 
+	@apply rounded-full bg-red/50 flex items-center leading-none text-white text-nowrap; 
 	font-size: 12px;
 	padding: 5px 7px;
 }
 
 .tag-green-large{
-	@apply rounded-full bg-green/50 flex items-center leading-none text-white; 
+	@apply rounded-full bg-green/50 flex items-center leading-none text-white text-nowrap; 
 	font-size: 12px;
 	padding: 5px 7px;
 }
