--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -289,6 +289,7 @@ body {
 		.el-dialog__header {
 			background-color: var(--transparent10);
 			padding: 16px;
+			min-height: 48px;
 			display: flex;
 			align-items: center;
 			position: relative;
@@ -312,7 +313,7 @@ body {
 				font-size: 16px;
 			}
 			.el-dialog__headerbtn {
-				height: 38px;
+				height: 48px;
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -561,8 +562,8 @@ body {
 		}
 	}
 	body .el-input-number--large .el-input--large .el-input__wrapper {
-		padding-left: 40px;
-		padding-right: 40px;
+		// padding-left: 40px;
+		// padding-right: 40px;
 	}
 	// .el-input__wrapper:hover {
 	// 	box-shadow: 0 0 0 1px var(--el-input-border-color) inset !important;
