止盈止损优化

--- a/assets/css/element.less
+++ b/assets/css/element.less
@@ -218,6 +218,10 @@ body {
 
 	.el-popover {
 		--el-popover-border-color: var(--transparent20);
+		color:rgb(var(--color-text-main));
+		&.el-popper{
+			color:rgb(var(--color-text-main));
+		}
 		&::before {
 			background-image: var(--bg-linear-180);
 			// filter: blur(60px);
