--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -279,13 +279,13 @@
 }
 
 .tag-red-large{
-	@apply rounded-full bg-red flex items-center leading-none text-white text-nowrap; 
+	@apply rounded-full bg-red/60 flex items-center leading-none text-white text-nowrap; 
 	font-size: 12px;
 	padding: 5px 7px;
 }
 
 .tag-green-large{
-	@apply rounded-full bg-green flex items-center leading-none text-white text-nowrap; 
+	@apply rounded-full bg-green/60 flex items-center leading-none text-white text-nowrap; 
 	font-size: 12px;
 	padding: 5px 7px;
 }
