--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -54,6 +54,7 @@ html:root {
   --footer-height: 40px;
   --status-bar-height:30px;
   --nav-height:50px;
+  --tabbar-height:38px;
   --safe-top: constant(safe-area-inset-top);
 	--safe-top: env(safe-area-inset-top);
 	--safe-bottom: constant(safe-area-inset-bottom);
@@ -63,6 +64,8 @@ html:root {
   --font-size:0.3733rem;
 
   --translate-animation-liner: cubic-bezier(0.51, 0.01, 0.01, 0.99);
+
+  --tabbar-background-position: 0 -var(--nav-height);
 }
 
 html.dark {
