大单和涨幅异动

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -19,6 +19,7 @@ html:root {
   --color-yellow:255 199 49;
   --color-grey: 150 150 150;
   --color-brand:204 16 176;
+  --color-blue:56 134 255;
   --transparent00:rgba(0,0,0,0);
   --transparent01:rgba(0,0,0,0.01);
   --transparent02:rgba(0,0,0,0.02);
@@ -88,6 +89,7 @@ html.dark {
   --color-yellow:255 199 49;
   --color-grey: 165 165 165;
   --color-brand:204 16 176;
+  --color-blue:56 134 255;
   --transparent00:rgba(255,255,255,0);
   --transparent01:rgba(255,255,255,0.01);
   --transparent02:rgba(255,255,255,0.02);
