PC端打包优化

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -47,6 +47,7 @@ html:root {
   --bg-linear-180:linear-gradient(180deg, #ffdffa, #ebd6ff, #d5e2ff);
   --bg-linear-90:linear-gradient(90deg, #ffdffa, #ebd6ff, #d5e2ff);
 
+  --title-bar-height:0px;
   --body-height:100vh;
   --body-width:100vw;
   --menu-width:44px;
