适配PC移动端

--- a/assets/css/theme.less
+++ b/assets/css/theme.less
@@ -66,8 +66,9 @@ html:root {
   --font-size:0.3733rem;
 
   --translate-animation-liner: cubic-bezier(0.51, 0.01, 0.01, 0.99);
-
   --tabbar-background-position: 0 -var(--nav-height);
+
+  --app-status-bar-height:0px;
 }
 
 html.dark {
